methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:26: error: type mismatch;
 found   : Unit
 required: Boolean
  prendBiscuit()
              ^